# mozlz4-sys

./: .gitignore  Cargo.toml  README.md
mozlz4-bin/: Cargo.toml
mozlz4-bin/src/: main.rs
src/: lib.rs  main.rs
